<resources>
    <string name="app_name">LeaderStandardWork</string>
    <string name="title_home">Home</string>
    <string name="title_planning">Planning</string>
    <string name="title_report">Report</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="Planning">Planning</string>
    <string name="Schedule" />
    <string name="Schedule1">Schedule</string>
    <string name="Report">Report</string>
    <string name="AppLogo">AppLogo</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Welcome">Welcome!</string>
    <string name="Test">Test</string>
    <string name="Description">The Leader Standard Work App is a tool that gives you
        the ability to register all the required activities
        that have to be completed on a daily, weekly, monthly basis.
        In addition, the app offers you the capability to share reports
        through be downloaded as a CSV or excel file.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Presentation">Play Video</string>
</resources>