<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHome"
        android:layout_width="281dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button"
        android:layout_width="193dp"
        android:layout_height="70dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="486dp"
        android:text="@string/Planning"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="193dp"
        android:layout_height="70dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="302dp"
        android:text="@string/Schedule1"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="193dp"
        android:layout_height="70dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:layout_marginBottom="125dp"
        android:text="@string/Report"
        android:textColor="@color/black"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>